# multi-dim-container

./: CMakeLists.txt  Readme.md  conanfile.py
cmake/: MultiDimContainerConfig.cmake.in
include/: Array.h
include/md/: Array.h
include/md/detail/: View.h
test/: ArrayTest.cpp  CMakeLists.txt
